# aerowake

air_dynamics/: CMakeLists.txt  package.xml
air_dynamics/src/: air_dynamics.cpp
boat_dynamics/: CMakeLists.txt  package.xml
boat_dynamics/include/boat_dynamics/: boat_dynamics.h
boat_dynamics/mesh/: ship_ned_GCS.dae
boat_dynamics/src/: boat_dynamics.cpp  boat_to_boatNWU_broadcaster.cpp  simulated_mocap.cpp
compass_driver/: CMakeLists.txt  package.xml
compass_driver/scripts/: compass_sim.py  compass_spoofer.py
flight/: CMakeLists.txt  package.xml
flight/launch/: estimation.launch  flight.launch  tethered_flight.launch
flight/launch/OLD/: camera_system_vicon.launch  indoor_perception.launch  milestone_2.launch  milestone_3.launch  odroid_oil_m4.launch  propless_test.launch
flight/launch/one-offs/: calibrate_camera.launch  collect_ekf_data.launch  ekf_data_collection_08-04-2020.launch  indoor_tether_08-2020.launch  rc_flight_mocap.launch  robust_rc.launch  tuning_flights_08-2020.launch  ukf_data_collection_08-17-2020.launch  vicon_vision_test.launch
flight/launch/support/: camera.launch  chameleon.launch  fcu_test.launch  hardware_camera_test.launch  mission.launch  obc_m4.launch  outdoor_estimator_test.launch  rover.launch
flight/scripts/: trajectory_planner.py
groundstation/: CMakeLists.txt  package.xml  setup.py
groundstation/launch/: estimation.launch  flight.launch  tethered_flight.launch
groundstation/launch/support/: base.launch  indoor_tether_08-2020.launch  mission.launch  tuning_flights_08-2020.launch  vicon_companion.launch
groundstation/scripts/: benchmark_mission.py  comm_socket.py  flow_sockets.py  indoor_mission.py  mission_comm.py  mission_teleop.py  simulated_reel_socket_server.py  tether_reel_controller.py
mav_disturbance_observer/: README.md
mav_disturbance_observer/unscented_kalman_filter/: CMakeLists.txt  package.xml
mav_disturbance_observer/unscented_kalman_filter/cfg/: README.txt  UKF.cfg
mav_disturbance_observer/unscented_kalman_filter/include/unscented_kalman_filter/: force_offset_fsm.h  unscented_kalman_filter.h
mav_disturbance_observer/unscented_kalman_filter/launch/: development_ukf_launch.launch  ukf_bluebird.launch  ukf_elster.launch  ukf_ibis.launch
mav_disturbance_observer/unscented_kalman_filter/resource/bluebird/: unscented_kalman_filter_param.yaml
mav_disturbance_observer/unscented_kalman_filter/resource/firefly/: unscented_kalman_filter_param.yaml
mav_disturbance_observer/unscented_kalman_filter/resource/ibis/: unscented_kalman_filter_param.yaml
mav_disturbance_observer/unscented_kalman_filter/src/: force_offset_fsm.cpp  unscented_kalman_filter.cpp
mav_disturbance_observer/unscented_kalman_filter/src/nodes/: unscented_kalman_filter_node.cpp  unscented_kalman_filter_node.h
params/: CMakeLists.txt  package.xml
params/params/: RF3_2020.yml
params/params/camera/: calib-binned-1.yaml  calib-binned-2.yaml  camera_config_GREENLIGHTS.yaml  creare-camera-calib.yaml  creare_config_GREENLIGHTS.yaml  creare_config_INFRARED.yaml
params/params/controller/: creare-gains.yaml  indoor_tether_sim.yaml  milestone_2_gains.yaml
params/params/ekf/: mit-abs-indoor-mocap.yaml  mit-abs-indoor-spoof.yaml  mit-rel-indoor-mocap.yaml  mit-rel-indoor-spoof.yaml  mit-roof-cart-relative.yaml
params/params/frame/: creare-frame.yaml  match-ff2-frame.yaml
params/params/mission/: creare-mission.yaml  (+2 more)
roscopter/: apply_cpp_style.sh
roscopter/roscopter/: CMakeLists.txt  package.xml
roscopter/roscopter_utils/: CMakeLists.txt
roscopter/roscopter_utils/include/roscopter_utils/: input_parser.h  input_parser.h.orig  progress_bar.h  progress_bar.h.orig  yaml.h
roscopter/roscopter_utils/lib/geometry/include/geometry/: cam.h  quat.h  quat.h.orig  support.h  support.h.orig  xform.h  xform.h.orig
roscopter/roscopter_utils/lib/geometry/src/: test.cpp  test.cpp.orig
rosflight/: .gitmodules
rosflight/rosflight_sim/: CMakeLists.txt
rosflight/rosflight_utils/: CMakeLists.txt
rosflight_sil/: CMakeLists.txt  package.xml
sim/: CMakeLists.txt  package.xml
sim/launch/: indoor_environment.launch  mission_environment.launch  outdoor_flight_viz.launch  sim_m4.launch
sim/rviz/: ekf_dc.rviz  full.rviz  tether_flights_08-2020.rviz
sim/scripts/: ekf_dc_env_visualizer.py  tf_NED_shipNED.py  tf_ship_shipNED.py  viz_beacons  viz_boat  viz_north  viz_uav
tether_dynamics/: CMakeLists.txt  package.xml
tether_dynamics/src/: tether_dynamics.cpp  tether_dynamics_node.cpp
tuning_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
tuning_gui/launch/: tuning_gui.launch
tuning_gui/perspectives/: aerowake_tuning.perspective
tuning_gui/scripts/: aerowake_tuning_gui
uav_dynamics/: CMakeLists.txt  package.xml
uav_dynamics/include/uav_dynamics/: uav_dynamics_ros.h
uav_dynamics/src/: simulated_mocap.cpp  uav_dynamics_ros.cpp  world_to_NED_broadcaster.cpp
utils/: CMakeLists.txt  package.xml
utils/scripts/: automatic_rc.py  benchmark_commander.py  motor_speed_TT_calc.py  motor_speed_calc.py  rc_signal_fixer.py  rel_pos_sensor.py  rel_vicon_sensor.py  vicon_sensor_NWU2NED.py  vicon_sensor_base.py  vision_sensor.py
vision/: CMakeLists.txt  package.xml
vision/launch/: bag_vision.launch  vision_system.launch
vision/scripts/: helper_functions.py  vision_system.py  vision_system_test.py
vision/src/: camera_sim.cpp  camera_sim_node.cpp
(+77 files in other folders)
